fixed spacing on modal box

--- a/public/layout/sass/_modal.scss
+++ b/public/layout/sass/_modal.scss
@@ -18,6 +18,7 @@
 		@include input-placeholders;
 		.input {
 			width: 100%;
+			margin: 0;
 		}
 			
 		li {
@@ -25,6 +26,7 @@
 			
 			&:last-child {
 				border: none;
+				margin: 20px 0 30px 0;
 			}
 		}
 
